--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,14 +5,12 @@ on:
     branches:
       - main
 
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
-
-
-
-			
+      uses: actions/checkout@v4
