--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,9 @@ jobs:
       with:
         username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: user/tst:latest
