--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         push: true
-        tags: user/tst:latest
+        tags: ${{ vars.DOCKERHUB_USERNAME }}/tst:latest
